--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@
 
 :root {
     --text-color: #fff;
-    --bg-url: url(../assets/assets/bg-mobile.jpg);
+    --bg-url: url(/assets/assets/bg-mobile.jpg);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.2);
@@ -16,12 +16,12 @@
 
 .light {
     --text-color: #000;
-    --bg-url: url(../assets/assets/bg-mobile-light.jpg);
+    --bg-url: url(/assets/assets/bg-mobile-light.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(0, 0, 0, 0.1);
-    --switch-bg-url: url(../assets/assets/sun.svg);
+    --switch-bg-url: url(/assets/assets/sun.svg);
 }
 
 body {
@@ -154,11 +154,11 @@ footer {
 
 @media (min-width: 700px) {
     :root {
-        --bg-url: url(../assets/assets/bg-desktop.jpg);
+        --bg-url: url(/assets/assets/bg-desktop.jpg);
     }
 
     .light {
-        --bg-url: url(../assets/assets/bg-desktop-light.jpg);
+        --bg-url: url(/assets/assets/bg-desktop-light.jpg);
     }
 }
 
